2011-06-02  andelf  <andelf@gmail.com>
	* qqweibo/parsers.py
	加入 XML 相关 Parser

2011-06-01  andelf  <andelf@gmail.com>
	* qqweibo/api.py
	reqnum 提前到非必须参数的第一个
	getvideoinfo 从 tweet 类移动到 other 类, 更名为 videoinfo
	* qqweibo/auth.py
	清理参数
	* api.doc.rst
	参考文档
	* qqweibo/cache.py
	缓存支持

2011-05-31  andelf  <andelf@gmail.com>
	* qqweibo/api.py
	加入 5.27 API 支持
	修改 addvideo, addmusic 等 API 参数顺序, 建议使用时全部采用关键字参数.
	感谢论坛ID: 空无一人 找出的BUG
	* example/api.list
	简单参考列表

2011-04-08  andelf  <andelf@gmail.com>
	* qqweibo/*.py
	全部 API 重构, 修改部分名字, ModelParser 支持完成
	* example/*.py
	相关例子
	* setup.py
	实验性安装脚本, 请不要用在生产环境
	* LICENSE
	加入  MIT LICENSE

2011-04-07  andelf  <andelf@gmail.com>
	* qqweibo/api.py
	加入剩余所有 API, format 参数删除
	* qqweibo/binder.py
	加入 format 参数 json

2011-04-05  andelf  <andelf@gmail.com>
	* qqweibo/api.py
	加入 关系链相关 私信相关 搜索相关 热度，趋势 数据更新相关 API
	* example.py
	加入相关测试

2011-04-03  andelf <andelf@gmail.com>
	* README
	初始 repos, 基本可用